--- a/styles/globals.css
+++ b/styles/globals.css
@@ -60,8 +60,7 @@ main {
 }
 
 .prose img {
-  @apply mx-auto mb-3 min-w-[220px];
-  margin-top: 0 !important;
+  @apply mb-3 min-w-[220px];
 }
 
 @media only screen and (min-width: 750px) {
@@ -72,7 +71,7 @@ main {
 }
 
 .prose figure figcaption {
-  @apply text-center mt-0 text-gray-600 dark:text-gray-400;
+  @apply mt-0 text-center text-gray-600 dark:text-gray-400;
 }
 
 /* Prism Styles */
